# python-project-50

./: Makefile  README.md  formater_stylish.py  gendiff.py  pyproject.toml
.github/workflows/: main.yml
gendif/files/: base_diff.py  file1.yaml  files_for_twofiles.py  formater_stylish.py  res.json  twofiles.py
gendif/formatters/: __init__.py  formater_json.py  formater_plain.py  formater_stylish.py
gendif/scripts/: base_diff.py  gendiff.py  twofiles.py
gendiff/: __init__.py  base_diff.py  cli.py  creating_diff.py  diff.py  parse.py  parse_1.py  twofiles.py
gendiff/files/: demo.cast  nested_yml_result.txt  uncorrect.txt
gendiff/formaters/: __init__.py
gendiff/formatters/: __init__.py  formater_json.py  formater_plain.py  formater_stylish.py  stylish.py  tst.py
gendiff/scripts/: __init__.py  base_diff.py  gendiff.py  twofiles.py
tests/: ress.txt  test_all_tests.py  test_test.py  test_tests.py
tests/fixtures/: test_1.py  test_2.py  test_3.py  test_4.py  test_5_flat.py  test_6_flat.py  test_7_nested.py  test_8_nested.py
tests/fixtures/files/: test_1.py  test_2.py  test_3.py  test_4.py  test_5_flat.py  test_6_flat.py  test_7_nested.py  test_8_nested.py
