[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Татьяна <deepredoctober@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendif" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
diff  = "gendif.scripts.gendiff:main"
